<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">V-Printing</string>
    <!--Tab title-->
    <string name="wedding_fragment">សំបុត្រការ</string>
    <string name="general_fragment">សំបុត្រ</string>
    <string name="design_fragment">សំបុត្រច្នៃ</string>
    <!--Item product-->
    <string name="code">លេខកូដស៏ :</string>
    <string name="color">ពណ៏ :</string>
    <string name="size">ទំហំ :</string>
    <string name="price_between">តម្លៃចាប់ពី :</string>
    <string name="contact">ទំនាក់ទំនង :</string>
    <string name="register">សូមចុះឈ្មោះ និងបំពេញពត័មាន</string>
    <string name="quantity">ចំនួន :</string>
    <string name="price">តម្លៃ :</string>
    <!--Register form-->
    <string name="fill_information">បំពេញពត៏មាន</string>
    <string name="groom_name">កូនប្រុសឈ្មោះ</string>
    <string name="dad_groom_name">ឪពុកកូនប្រុសឈ្មោះ</string>
    <string name="mom_groom_name">ម្តាយកូនប្រុសឈ្មោះ</string>
    <string name="bride_name">កូនស្រីឈ្មោះ</string>
    <string name="dad_bride_name">ឪពុកកូនស្រីឈ្មោះ</string>
    <string name="mom_bride_name">ម្តាយកូនស្រីឈ្មោះ</string>
    <string name="day">ថ្ងៃ</string>
    <string name="st">ទី</string>
    <string name="month">ខែ</string>
    <string name="year">ឆ្នាំ</string>
    <string name="home">ផ្ទះ</string>
    <string name="house">គេហដ្ឋានខាង</string>
    <string name="place_eat">ទីតាំងពិសាភោជនាអាហារ</string>
    <string name="time_eat">ម៉ោងពិសាភោជនាអាហារ</string>
    <string name="phone">លេខទូរស័ព្ទ</string>
    <string name="email">អ៊ីម៉ែល</string>
    <string name="facebook">Facebook</string>
    <string name="other">ផ្សេងៗ</string>
    <string name="wedding_date">ថ្ងៃរៀបអាពាហ៍ពិពាហ៍</string>
    <string name="wedding_date_khmer">ថ្ងៃចន្ទគតិ​ខ្មែរ</string>
    <string name="wedding_address">អាស័យដ្ឋាន</string>
    <string name="village">ភូមិ</string>
    <string name="commune">ឃុំ</string>
    <string name="district">ស្រុក</string>
    <string name="provice">ខេត្ត</string>
    <string name="address">ភូមិ\u0020\u0020\u0020\u0020\u0020ឃុំ\u0020\u0020\u0020\u0020\u0020ស្រុក\u0020\u0020\u0020\u0020\u0020ខេត្ត</string>
    <string name="choose_image">ជ្រើសរើស រូបភាព</string>
    <string name="date_format">Sun/16/Aug/2017</string>
    <string name="date_format_kh">ថ្ងៃ ១៥រោច ខែ មាឃ ឆ្នាំរកា នព្វ​ស័ក​ ព.ស.​២៥៦១</string>
    <string name="send_information">បព្ជូានព័ត៌មាន</string>
    <string name="days">{"Mon":"ថ្ងៃចន្ទ","Tue":"ថ្ងៃអង្គារ","Wed":"ថ្ងៃពុធ","Thu":"ថ្ងៃព្រហស្បតិ៍","Fri":"ថ្ងៃសុក្រ","Sat":"ថ្ងៃសៅរ៍","Sun":"ថ្ងៃអាទិត្យ"}</string>
    <!--App message KH-->
    <string name="cannot_empty">មិនអាចទទេ</string>
    <string name="search_product">ស្វែងរកផលិតផល</string>
    <string name="submitting">កំពុងបព្ជូាន...</string>
    <string name="successed">បានជោគជ័យ</string>
    <string name="fail">បរាជ័យ</string>
    <string name="invalid_information">ព័ត៌មានមិនត្រឹមត្រូវ</string>
    <string name="please_retry">Please retry!</string>
    <string name="something_went_wrong">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_lost">Internet connection lost!</string>
    <!--Ceremony form-->
    <string name="name_of_body">ឈ្មោះអ្នកស្លាប់</string>
    <string name="name_of_starter">ឈ្មោះអ្នកផ្តើមបុណ្ប</string>
    <string name="ceremony_step">កម្មវិធីបុណ្ប</string>
    <string name="ceremony_place">ទីកន្លែងកម្មវិធីបុណ្ប</string>
    <!--home party form-->
    <string name="name_of_house_party">ឈ្មោះម្ចាស់ផ្ទះ</string>
    <string name="name_of_husband">ប្តី</string>
    <string name="name_of_wife">ប្រពន្ធ</string>
    <string name="place">ទីកន្លែងកម្មវិធី</string>
    <string name="time">ពេលវេលា</string>
    <!--happy birth day form-->
    <string name="name_of_child">ឈ្មោះកូន</string>
    <string name="name_of_parent">ឈ្មោះអាណាព្យបាល</string>
    <string name="name_of_father">ឈ្មោះឪពុក</string>
    <string name="name_of_mother">ឈ្មោះម្តាយ</string>
    <!--invoice-->
    <string name="name_of_company">ឈ្មោះក្រុមហ៊ុន</string>
    <string name="name_of_customer">ឈ្មោះអតិថិជន</string>
</resources>
