<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_view_product"
                android:layout_width="@dimen/product_image_width"
                android:layout_height="@dimen/product_image_height"
                android:layout_margin="@dimen/product_image_margin"
                android:src="@drawable/ic_wedding_default"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code"
                    android:textColor="@android:color/black" />

                <org.jarvis.code.ui.widget.ColorView
                    android:id="@+id/colorView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    custom:text="@string/color"
                    custom:view_color_height="@dimen/view_color_height"
                    custom:view_color_width="@dimen/view_color_width" />

                <TextView
                    android:id="@+id/lblSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/lblPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:text="@string/price_between"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/lblContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="@dimen/button_register_width"
                    android:layout_height="@dimen/button_register_height"
                    android:background="@color/colorAccent"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
