<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/fill_information"
        android:textColor="@color/colorBlack"
        android:textSize="25dp" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblProductCode"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblProductColor"
                    style="@style/LabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <Spinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="@dimen/spiner_color_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout>

                <TextView
                    android:id="@+id/lblProductQty"
                    style="@style/LabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:text="@string/quantity" />

                <EditText
                    android:id="@+id/txtProductQty"
                    style="@style/EditTextStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:ems="17"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                android:id="@+id/lblProductAmount"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/price" />

        </TableRow>

    </TableLayout>

</LinearLayout>