<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <include layout="@layout/header_form"/>

            <TextView
                android:id="@+id/lblChild"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_child" />

            <EditText
                android:id="@+id/txtNameBody"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/name_of_child"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblParent"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_parent" />

            <EditText
                android:id="@+id/txtParent"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/name_of_parent"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblPlace"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place" />

            <EditText
                android:id="@+id/txtPlace"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/place"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblTime"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <EditText
                android:id="@+id/txtTime"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/time"
                android:inputType="text" />

            <include layout="@layout/footer_form"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>