<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <include layout="@layout/header_form"/>

            <TextView
                android:id="@+id/lblCompany"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_company" />

            <EditText
                android:id="@+id/txtCompany"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/name_of_company"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblCustomer"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_customer" />

            <EditText
                android:id="@+id/txtCustomer"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/name_of_customer"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblAddress"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wedding_address" />

            <EditText
                android:id="@+id/txtAddress"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/wedding_address"
                android:inputType="text" />

            <TextView
                android:id="@+id/lblTime"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <EditText
                android:id="@+id/txtTime"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="17"
                android:hint="@string/time"
                android:inputType="text" />

            <include layout="@layout/footer_form"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>