<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblPhone"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/txtPhone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="17"
        android:hint="@string/phone"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblEmail"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/txtEmail"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="17"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:id="@+id/lblFacebook"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook" />

    <EditText
        android:id="@+id/txtFacebook"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="17"
        android:hint="@string/facebook"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblOther"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other" />

    <EditText
        android:id="@+id/txtOther"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="17"
        android:hint="@string/other"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/send_information"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

        <ImageButton
            android:id="@+id/imgChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/img_choose_src" />

        <ImageButton
            android:id="@+id/imgMap"
            android:layout_width="51dp"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/img_google_map_src" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/img_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>